--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@inertiajs/inertia": "^0.10.1",
         "@inertiajs/inertia-react": "^0.7.1",
         "@inertiajs/server": "^0.1.0",
+        "@paypal/react-paypal-js": "^7.6.0",
         "@stripe/react-stripe-js": "^1.7.2",
         "@stripe/stripe-js": "^1.27.0",
         "flutterwave-react-v3": "^1.2.0",
