--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ APP_ENV=local
 APP_KEY=base64:n/zx6f9NRagFHYk/m0rVr8VuheMlktjax3w/pFUUK20=
 APP_DEBUG=true
 APP_URL=https://fast-iptv.shop
-MIX_DIGITAL=https://ecombunny.net
-MIX_IPTV=https://fast-iptv.shop/
+MIX_DIGITAL=https://box.fast-iptv.shop
+MIX_IPTV==https://box.fast-iptv.shop/
 MIX_CHECKOUT=https://benegrowthagency.com/checkout
 MIX_EXTEND=https://benegrowthagency.com/checkout/extend.php?ott&uniqueid=
 
